# AI_Engineering_Assignment

./: .env  .gitignore  README.md  pyproject.toml  query_samples.txt  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py
app/agent/: db_agent_connector.py  langgraph_agent.py  langraph_agent.py
app/api/: routes.py
app/database/: db_connector.py
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py  test_agent.py  test_api.py  test_database.py  test_db_agent_connector.py
